k8s/pihole/ingress.yaml
---
# Expose Pi-hole admin UI at http://pihole.local
# Requires pihole.local mDNS alias on the-bakery (see base-setup.yaml)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pihole.local`)
      kind: Rule
      services:
        - name: pihole-web
          port: 8080
